# pyrite_box

./: Cargo.toml  LICENSE  README.md  TestModule.pyr
characters/: New Character.chr
modules/TestModule/: header.ron
modules/TestModule/maps/: civilized.ron  index.ron  slums.ron
modules/TestModule/materials/: grass.ron  gray.ron  index.ron  red.ron  stone_wall.ron
modules/TestModule/scripts/: civilized.ron  module.ron  slums.ron
src/: main.rs
src/game_states/: fps.rs  loading.rs  main_menu.rs  map_wander.rs  mod.rs  module_editor.rs  ui_assets.rs
src/game_states/battle/: battle_map.rs  mod.rs
src/game_states/chargen/: character_header.rs  mod.rs
src/game_states/map_wander/: asset_loader.rs  gamelog.rs  mod.rs  player_movement.rs  sprites.rs
src/game_states/module_editor/: events.rs  maps.rs  materials.rs  menu.rs  mod.rs  module_info.rs
src/module/: direction.rs  game_events.rs  materials.rs  mod.rs  module.rs
src/module/game_events/: events.rs  runner.rs
src/modules/: loader.rs  map_loader.rs  material_loader.rs  mod.rs  saver.rs  scanner.rs  scripts_loader.rs
src/modules/module/: materials.rs  mod.rs
src/plugins/: mod.rs
src/plugins/battle/: battle_map.rs  battle_runner.rs  battle_tile.rs  components.rs  mod.rs
src/plugins/character_generator/: generator.rs  mod.rs
src/region/: geometry.rs  mod.rs  region_assets.rs  region_map.rs
src/state/: app_state.rs  available_modules.rs  chargen_resource.rs  map_editor_settings.rs  mod.rs  module_selector.rs  wander_input.rs  wander_resource.rs
src/utils/: direction.rs  mod.rs
(+47 files in other folders)
