[package]
name = "pyrite_box"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.7"
bevy_egui = "0.13.0"
bracket-random = "0.8"
serde = "1.0"
ron = "0.7"
anyhow = "1.0.51"

#[patch.crates-io]
#bevy = { git = "https://github.com/jakobhellermann/bevy.git", branch="camera-viewport" }
